# pytest

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
