[tool.poetry]
name = "pytest"
version = "0.1.0"
description = ""
authors = ["RosGus80 <124379507+RosGus80@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "22.2.0"
colorama = "0.4.6"
coverage = "7.0.5"
iniconfig = "2.0.0"
packaging = "2.0.0"
pluggy = "1.0.0"
pytest = "7.2.1"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
